resources/public/css/reabledit.css
.reabledit {
  display: flex;
  flex-flow: column nowrap;
  border: 2px solid #ddd;
}

.reabledit:focus {
  outline: none;
}

.reabledit-row {
  display: flex;
}

.reabledit-header {
  background-color: #f3f3f3 !important;
  font-weight: bold;
}

.reabledit-cell {
  display: flex;
  flex: 1 1 0;
  min-width: 100px;
  align-items: center;
  background-color: #fff;
  border: 1px solid #ddd;
  height: 40px;
}

.reabledit-cell.selected {
  background-color: #f9f9f9;
  border: 1px solid #4ca2d8;
}

.reabledit-cell span {
  padding-left: 7px;
}

.reabledit-cell input {
  width: 100%;
  height: 100%;
  padding-left: 6px;
  font-size: 95%;
  box-sizing: border-box;
}

.reabledit-dropdown {
  position: relative;
  width: 100%;
}

.reabledit-dropdown:focus {
  outline: none;
}

.reabledit-dropdown-items {
  position: absolute;
  margin-top: 10px;
  background-color: #fff;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  width: 100%;
}

.reabledit-dropdown-item {
  display: flex;
  align-items: center;
  height: 40px;
}

.reabledit-dropdown-item.selected {
    background-color: #4ca2d8;
    color: #fff;
}

